# gearsvk

./: .gitignore  readme.md
app/src/main/cpp/jpeg/: Android.mk  CMakeLists.txt  jquant2.c  readme.md
app/src/main/cpp/libexpat/expat/lib/: .gitignore
app/src/main/cpp/libvkk/ui/: vkk_uiInfoPanel.c  vkk_uiLayer.h
app/src/main/cpp/libxmlstream/: CMakeLists.txt  Makefile  readme.md  xml_istream.c  xml_istream.h  xml_ostream.c  xml_ostream.h
app/src/main/cpp/libxmlstream/test-istream/: Makefile  setup.sh  test-istream.c
app/src/main/cpp/libxmlstream/test-ostream/: Makefile  setup.sh  test-ostream.c
app/src/main/cpp/texgz/: CMakeLists.txt  Makefile  Makefile.wasm  build-plugin.sh  pil_lanczos.c  pil_lanczos.h  readme.md  texgz-plugin.c  texgz_jp2.c  texgz_jp2.h  texgz_jpeg.c  texgz_jpeg.h  texgz_png.c  texgz_png.h  texgz_tex.c  texgz_tex.h
app/src/main/cpp/texgz/texgz-convert/: Makefile  texgz-convert.c
app/src/main/cpp/texgz/texgz-inlier/: Makefile  texgz-inlier.c  texgz_inlier.c  texgz_inlier.h
app/src/main/cpp/texgz/texgz-mipmap/: Makefile  readme.md  setup.sh  texgz-mipmap.c
app/src/main/cpp/texgz/texgz-outline/: Makefile  outline-mask.xcf  texgz-outline.c
app/src/main/cpp/texgz/texgz-slic/: Makefile  readme.md  texgz-slic.c  texgz_slic.c  texgz_slic.h
app/src/main/cpp/texgz/texgz-slic/data/: run-tomato-256.sh
app/src/main/java/com/jeffboody/vkk/: VKKGpsService.java  VKKNativeActivity.java  readme.md
